# foundry-warden

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.json  pyproject.toml  run_warden.py
.github/: FUNDING.yml  SHARE_YOUR_RESULTS.md
.github/ISSUE_TEMPLATE/: showcase-result.yml
.github/workflows/: ci.yml
examples/showcase/: README.md  aggregate_community.py  analyze_capture.py  generate_load.py  run_showcase.py  sample_capture.json
foundry_warden/: __init__.py  __main__.py  benchmark.py  benchmark_report.py  config.py  daemon.py  detection.py  logging_setup.py  metrics.py  models.py  service.py  showcase_export.py  telemetry.py  throttle.py  updater.py  winapi.py
tests/: test_showcase_export.py  test_update_check.py
